Disable SelectAll for the editable contains a BR only

When the editable contains a BR only, it appears as an empty line,
in which case allowing select-all confuses users.The CL checks for
this special-case.

Bug: 916405
Change-Id: I394c83f10b7b3537973314d92123e629a9d7fd61
Reviewed-on: https://chromium-review.googlesource.com/c/1384324
Reviewed-by: Xiaocheng Hu <xiaochengh@chromium.org>
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#618768}
Former-commit-id: 9ee1dc03a5bb9d983f665d67a56ecfa7c7b9f309